--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,19 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
+  background-color: #f4f5f5;
 }
+
+
+
 
 .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
+  float: left;
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
@@ -17,7 +22,7 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-@keyframes logo-spin {
+/* @keyframes logo-spin {
   from {
     transform: rotate(0deg);
   }
@@ -30,12 +35,12 @@
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
+} */
 
-.card {
+/* .card {
   padding: 2em;
 }
 
 .read-the-docs {
   color: #888;
-}
+} */
