--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,13 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+.container-left{
+  width: 600px;
+  height: auto;
+  left: 150px;
+  ;
+}
+
 /* @keyframes logo-spin {
   from {
     transform: rotate(0deg);
