--- a/src/style/navigator.css
+++ b/src/style/navigator.css
@@ -19,6 +19,6 @@ li
 .container-up
 {
     display: flex;
-    background-color: aqua;
+    background-color: rgb(253, 255, 237);
     margin-bottom: 10px;
 }
