--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 
 
 #root {
-  /* max-width: 1280px; */
-  margin: 0 auto;
-  /* padding: 2rem; */
+
   text-align: center;
   background-color: #f4f5f5;
+  padding: 0;
+  margin: 0;
 }
 .logo {
   height: 6em;
