--- a/src/style/navigator.css
+++ b/src/style/navigator.css
@@ -1,20 +1,7 @@
-
-.container-1
-{
-    height: 60px;
-}
-.container-2
-{
-    height: 50px;
-    margin-left: 320px;
-}
 .container-up
 {
-    /* display: flex;
-    flex-direction: column; */
     display: flex;
     flex-direction: column;
-    /* background-color: rgb(253, 255, 237); */
     background-color: #fff;
     margin-bottom: 10px;
     height: 110px;
@@ -22,7 +9,45 @@
     font-size:small;
 }
 
-
+.container-1
+{
+    height: 60px;
+    display: flex;
+}
+.container-2
+{
+    height: 50px;
+    margin-left: 320px;
+}
+.search-btn
+{
+    width: 300px;
+    height: 30px;
+    transition: all 0.3s ease-in-out;
+    /* border: 1px solid red; */
+}
+.search-box
+{
+    display: flex;
+    margin-top: 10px;
+    margin-left: 120px;
+    height: 20px;
+    width: 500px;
+    /* border: 1px solid red; */
+   transition: all 0.3s ease-in-out;
+}
+.search-btn:focus
+{
+    width:440px;
+    border-color: #4a71b6;
+}
+.search-icon
+{
+    /* border: 1px solid red; */
+    height: 25px;
+    background-color: #f4f5f5;
+    margin-top: 3px;
+}
 /* 上面的列表 */
 .main-nav-tabs
 {
@@ -48,7 +73,7 @@
     float: left;
     /* margin-left: 10px; */
     width: 55px;
-    height: 50px;
+    height: 40px;
 }
 .sub-nav-tabs li{
     width: 70px;
