--- a/src/style/list.css
+++ b/src/style/list.css
@@ -1,31 +1,60 @@
-.container-left
+.container-left/*总容器*/
 {
     display: flex;
-    background-color: rgb(197, 246, 239);
+    background-color: rgb(255, 255, 255);
     width: 700px;
     height: auto;
     margin-left: 250px;
+    padding-left: 0px;
     
 }
 
-.up-class
+.up-class/*上侧导航栏*/
 {
     justify-content: space-evenly;
     font-size: small;
     list-style: none;    /*去掉小圆点*/
     float: left;
     margin-left: 20px;
-    width: 40px;
+    width: 30px;
     overflow: auto;
     flex-direction: row;
+    margin-block: 5px;
 }
 
-.passage
+.line/*竖分割线*/
+{
+    position: relative;
+    background-color: #c9c9c9;
+    width:1px;
+    height: 20px;
+    float: left;
+    justify-content: space-evenly;
+    margin-left: 20px;
+    margin-top: 5px;
+}
+
+.writer
+{
+    flex-direction: row;
+    font-weight: 400;
+    font-size: small;
+}
+
+.passage/*文章列表*/
 {
     flex-direction: column;
     list-style: none;
     font-weight: bold;
+    text-align: left;
+    margin-top: 50px;
+    overflow: auto;
 }
+
+a:link{color:rgb(60, 60, 60)}
+a:visited{color:rgb(60, 60, 60)}
+a:hover{color:rgb(196, 239, 255)}
+a:visited{color:rgb(60,60,60)}
 
 /*.container-left li
 {
