--- a/src/style/list.css
+++ b/src/style/list.css
@@ -39,6 +39,8 @@
     flex-direction: row;
     font-weight: 400;
     font-size: small;
+    display: flex;
+    text-align: left;
 }
 
 .passage/*文章列表*/
