--- a/src/style/sidebar.css
+++ b/src/style/sidebar.css
@@ -6,8 +6,20 @@
     width: 220px;
     height: auto;
     padding-left: 30px;
+    margin-top: 0px;
     margin-left: 20px;
     border:solid 1px red;
+    clear: both;
+}
+
+.container-right ul{margin-left: -40px;
+display: flex;
+border: solid 1px red;
+overflow: auto;
+}
+
+.firstline{
+    display: inline;
 }
 
 .title
@@ -16,18 +28,28 @@
     font-weight:bold;
     font-size:large;
     display: flex;
-    text-align: left;
+    position: static;
     margin-block: 10px;
+    white-space: nowrap;
 }
 
 .button
 {
     border-style: solid;
-    border-radius: 20px 20px 22px 22px;
+    border-radius: 22px 22px 22px 22px;
     border-color:#4a71b6;
-    flex-direction: row;
+    display: inline;
+    float: left;
     padding: 10px 12px 10px 12px;
     font-size: medium;
     color:#1a60d9;
     background-color: #ffffff;
+    white-space: nowrap;
+}
+
+.wen
+{
+    display: flex;
+    white-space: nowrap;
+    text-align: left;
 }
