--- a/src/style/sidebar.css
+++ b/src/style/sidebar.css
@@ -1,25 +1,29 @@
 .container-right
 {
+    width: 300px;
+    height: 1000px;
+
     position:sticky;
     display: flex;
     background-color: rgb(255, 255, 255);
-    width: 220px;
-    height: auto;
+ 
     padding-left: 30px;
     margin-top: 0px;
     margin-left: 20px;
-    border:solid 1px red;
+    border:solid 1px green;
     clear: both;
 }
 
-.container-right ul{margin-left: -40px;
-display: flex;
-border: solid 1px red;
-overflow: auto;
+.container-right ul{
+    margin-left: -40px;
+    display: flex;
+    flex-direction: column;
+    border: solid 1px blue;
+    overflow: auto;
 }
 
 .firstline{
-    display: inline;
+    display: flex;
 }
 
 .title
