--- a/src/style/sidebar.css
+++ b/src/style/sidebar.css
@@ -1,7 +1,7 @@
 .container-right
 {
     width: 230px;
-    height: 1000px;
+    height: 500px;
 
     padding-left: 30px;
     margin-top: 0px;
@@ -11,7 +11,7 @@
     display:block;
     background-color: #f4f5f5;
  
-    border:solid 1px green;
+    /*border:solid 1px green;*/
 }
 
 .block1{
@@ -119,3 +119,58 @@ span.secondline{
     margin-left: 75px;
     margin-top: -33px;
 }
+
+.block3{
+    width: 230px;
+    height: 157px;
+
+    margin-top: 10px;
+    margin-left: -30px;
+
+    background-color: #ffffff;
+}
+
+.pic{
+    height: 35px;
+
+    margin-left: 10px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+.title3{
+    font-weight: 430;
+    font-size:14px;
+
+    margin-left: 13px;
+    margin-top: 14px;
+}
+
+.block4{
+    margin-left: -30px;
+    margin-top: 10px;
+
+    background-color: #f4f5f5;
+    text-align: left;
+    flex-direction: column;
+
+    /*border: 1px black solid;*/
+}
+
+.block4 li{list-style: none;}
+
+.title4{
+    font-size: x-small;
+}
+
+.pic1{
+    height: 20px;
+
+    margin-right: 5px;
+}
+
+.title5{
+    font-size: x-small;
+    font-weight: 500;
+}
+
