--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
 .contain{
   display: flex;
   width: 1300px;
-  height: 500px;
-  margin-left:50px;
-  border: solid 1px red;
+  height: 1000px;
+  margin-left:100px;
+  /*border: solid 1px red;*/
 }
