--- a/src/style/sidebar.css
+++ b/src/style/sidebar.css
@@ -73,6 +73,8 @@
     white-space: nowrap;
 }
 
+.button:hover{background-color: #8ca8d53a;transition: 0.4s; ;}
+
 .secondline
 {
     font-size:smaller;
@@ -84,7 +86,7 @@
     white-space: nowrap;
     text-align: left;
 }
-
+/*1-2盒子分割线*/
 .block2{
     width: 230px;
     height: 70px;
@@ -119,8 +121,93 @@ span.secondline{
     margin-left: 75px;
     margin-top: -33px;
 }
-
+/*2-3盒子分割线*/
 .block3{
+    width: 230px;
+    height: 250px;
+
+    margin-top: 10px;
+    margin-left: -30px;
+
+    background-color: #ffffff;
+}
+
+.pic2{
+    width: 20px;
+    height: 20px;
+
+    margin-top: 10px;
+    margin-left:10px;
+
+    border: #1a60d9 solid 1px;
+}
+
+.title6{
+    font-weight: 430;
+    font-size:14px;
+
+    margin-left: 5px;
+    margin-top: 10px;
+    
+    float: right;
+}
+
+.hr{
+    margin-top: 0px;
+    border:0;
+    padding-top:1px;
+    background: linear-gradient(to right,transparent,#d0d0d5,transparent);
+}
+
+.button1{
+    width: 230px;
+    height: 55px;
+
+    margin-top: -8px;
+
+    background-color: #ffffff;
+    border-radius: 0%;
+}
+
+
+
+.button2{
+    width: 230px;
+    height: 45px;
+
+    margin-top: -8px;
+
+    background-color: #ffffff;
+    border-radius: 0%;
+}
+
+.title7{
+    font-weight: 430;
+    font-size:14px;
+    color: #1a60d9;
+
+    margin-top: 2px;
+    margin-left: -150px;
+
+    white-space: nowrap;
+    
+    float: right;
+}
+
+.title8{
+    font-weight: 500;
+    font-size:14px;
+    color: #000000;
+
+    margin-top: 2px;
+    margin-left: -180px;
+
+    white-space: nowrap;
+    
+    float: right;
+}
+/*3-4盒子分割线*/
+.block4{
     width: 230px;
     height: 157px;
 
@@ -145,8 +232,8 @@ span.secondline{
     margin-left: 13px;
     margin-top: 14px;
 }
-
-.block4{
+/*4-5盒子分割线*/
+.block5{
     margin-left: -30px;
     margin-top: 10px;
 
@@ -157,7 +244,7 @@ span.secondline{
     /*border: 1px black solid;*/
 }
 
-.block4 li{list-style: none;}
+.block3 li,.block5 li{list-style: none;}
 
 .title4{
     font-size: x-small;
